# m3OS

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  rebase_helper.sh  setup.sh  tasks.md  x86_64-m3os.json
docs/: 01-boot.md  (+86 more)
kernel/: Cargo.toml  x86_64-ostest.json
kernel-core/: Cargo.toml
kernel-core/proptest-regressions/display/: compose.txt  protocol.txt  surface.txt
kernel-core/proptest-regressions/input/: events.txt  mouse.txt
kernel-core/src/: address_space.rs  buddy.rs  cred.rs  cross_cpu_free.rs  e1000.rs  fb.rs  input.rs  lib.rs  log_ring.rs  magazine.rs  mm.rs  nvme.rs  pci.rs  pipe.rs  preempt_frame.rs  preempt_model.rs  prng.rs  pty.rs  sched_model.rs  service.rs  session_control.rs  session_supervisor.rs  size_class.rs  slab.rs  time.rs  trace_ring.rs  tty.rs  types.rs  user_range.rs  watchdog_policy.rs
kernel-core/src/audio/: errno.rs  format.rs  mod.rs  protocol.rs  ring.rs  ring_proptest.rs
kernel-core/src/device_host/: audio_class.rs  dma_logic.rs  irq_logic.rs  mmio_bounds.rs  mod.rs  registry_logic.rs  syscalls.rs  types.rs
kernel-core/src/display/: buffer.rs  compose.rs  control.rs  cursor.rs  fb_owner.rs  frame_tick.rs  layer.rs  layout.rs  mod.rs  pixel_chunk.rs  protocol.rs  stats.rs  surface.rs
kernel-core/src/driver_ipc/: blk_dispatch.rs  block.rs  mod.rs  net.rs
kernel-core/src/driver_runtime/: contract.rs  mod.rs
kernel-core/src/fs/: ext2.rs  fat32.rs  mbr.rs  mod.rs  tmpfs.rs  vfs_protocol.rs
kernel-core/src/input/: bind_table.rs  dispatch.rs  events.rs  keymap.rs  mod.rs  mouse.rs
kernel-core/src/iommu/: acpi_integration.rs  amdvi_page_table.rs  amdvi_regs.rs  bar_coverage.rs  bar_coverage_proptest.rs  contract.rs  device_map.rs  identity.rs  iova.rs  mod.rs  regions.rs  tables.rs  vtd_page_table.rs  vtd_regs.rs
kernel-core/src/ipc/: bound_notif.rs  bound_notif_proptest.rs  buffer.rs  capability.rs  message.rs  mod.rs  registry.rs  wake_kind.rs
kernel-core/src/net/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs  udp_protocol.rs
kernel-core/src/session/: font.rs  font_data.rs  mod.rs  recover.rs  startup.rs
kernel-core/tests/: allocator_loom.rs  driver_restart.rs  driver_runtime_contract.rs  fork_props.rs  g4_timeout_regression.rs  iommu_contract.rs  iommu_contract_smoke.rs  iommu_parity.rs  ipc_loom.rs  ipc_v2_block_wake.rs  lock_ordering_smoke.rs  multiplier_sweep_smoke.rs  phase56_g1_multi_client_coexistence.rs  phase56_g2_keybind_grab_hook.rs  phase56_g3_layer_integration.rs  phase56_g4_control_socket_roundtrip.rs  phase57_c2_audio_bar_coverage.rs  phase57_f2_session_manager_boot.rs  phase57_f3_session_supervisor.rs  phase57_f4_recovery.rs  phase57_f4_text_fallback_executor.rs  phase57_f5_session_control.rs  phase57_g2_font.rs  phase57a_h3_syslogd_drain_chunk.rs  preempt_property.rs  remote_nic_contract.rs  sched_fuzz_multicore.rs  sched_loom.rs  sched_property.rs  scheduler_props.rs  service_props.rs  sys_notif_bind_contract.rs
kernel-core/tests/fixtures/: driver_runtime_mock.rs  mock_unit.rs  mod.rs
kernel/initrd/: PROMPT  adduser  ar  cal  calc-rust  cat  chmod  chown  cp  crond  crontab  crypto-test  cut  date  df  diff  dmesg  doom  du  echo  echo-args  echo-args.elf  edit  env  exit0  exit0.elf  false  file  find  fork-test  fork-test.elf  free  genkey  grep  head  hello  hello-rust  hello.txt  hexdump  hostname  (+63 more)
kernel/src/: main.rs  panic_diag.rs  pipe.rs  pty.rs  rtc.rs  serial.rs  signal.rs  smp.rs  stdin.rs  testing.rs  trace.rs  tty.rs
kernel/src/acpi/: mod.rs
kernel/src/arch/: mod.rs
kernel/src/blk/: mbr.rs  mod.rs  nvme.rs  remote.rs  virtio_blk.rs
kernel/src/fb/: mod.rs
kernel/src/fs/: ext2.rs  fat32.rs  mod.rs  procfs.rs  protocol.rs  ramdisk.rs  tmpfs.rs  vfs.rs
kernel/src/iommu/: amd.rs  fault.rs  intel.rs  mod.rs  registry.rs
kernel/src/ipc/: capability.rs  cleanup.rs  endpoint.rs  message.rs  mod.rs  notification.rs  registry.rs
kernel/src/mm/: debug.rs  dma.rs  elf.rs  frame_allocator.rs  heap.rs  memory_map.rs  mod.rs  paging.rs  slab.rs  user_mem.rs  user_space.rs
kernel/src/net/: arp.rs  config.rs  dispatch.rs  e1000.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  remote.rs  tcp.rs  udp.rs  unix.rs  virtio_net.rs
kernel/src/pci/: bar.rs  mod.rs
kernel/src/process/: futex.rs  mod.rs
kernel/src/smp/: boot.rs  ipi.rs  mod.rs  tlb.rs
kernel/src/syscall/: device_host.rs  mod.rs  net.rs
kernel/src/task/: blocking_mutex.rs  mod.rs  sched_trace.rs  scheduler.rs  wait_queue.rs  watchdog.rs
kernel/src/time/: mod.rs
kernel/tests/: bound_recv.rs  preempt_user_stress.rs  preempt_voluntary.rs  sched_fuzz.rs
userspace/audio-demo/: Cargo.toml
userspace/audio-demo/src/: main.rs
userspace/audio_server/: Cargo.toml
userspace/audio_server/src/: client.rs  device.rs  irq.rs  lib.rs  main.rs  stream.rs  stub.rs
userspace/audio_server/tests/: multi_client.rs
userspace/coreutils-rs/: Cargo.toml
userspace/coreutils-rs/src/: ar.rs  cal.rs  cat.rs  chmod.rs  chown.rs  common.rs  cp.rs  crontab.rs  cut.rs  date.rs  df.rs  diff.rs  dmesg.rs  du.rs  echo.rs  env.rs  false.rs  file.rs  find.rs  free.rs  genkey.rs  grep.rs  head.rs  hexdump.rs  hostname.rs  install.rs  kill.rs  last.rs  less.rs  ln.rs  logger.rs  ls.rs  meminfo.rs  mkdir.rs  mount.rs  mv.rs  patch.rs  prompt.rs  ps.rs  pwd.rs  (+24 more)
userspace/crypto-lib/: Cargo.toml
userspace/crypto-lib/src/: asymmetric.rs  hash.rs  lib.rs  random.rs  symmetric.rs
userspace/display-multi-client-smoke/: Cargo.toml
userspace/display-multi-client-smoke/src/: main.rs
userspace/display-server-crash-smoke/: Cargo.toml
userspace/display-server-crash-smoke/src/: main.rs
userspace/drivers/e1000/: Cargo.toml
userspace/drivers/nvme/: Cargo.toml
userspace/gfx-demo/: Cargo.toml
userspace/gfx-demo/src/: main.rs
userspace/kbd_server/: Cargo.toml
userspace/kbd_server/src/: main.rs
userspace/lib/audio_client/: Cargo.toml
userspace/m3ctl/: Cargo.toml
userspace/mouse_server/: Cargo.toml
userspace/passwd/: Cargo.toml
userspace/sshd/: Cargo.toml
userspace/term/: Cargo.toml
(+667 files in other folders)
