[workspace]
members = [
    "kernel",
    "kernel-core",
    "xtask",
    # Phase 11 userspace test binaries
    "userspace/syscall-lib",
    "userspace/exit0",
    "userspace/fork-test",
    "userspace/echo-args",
    # Phase 20 userspace init and shell
    "userspace/init",
    "userspace/shell",
    # Phase 23 userspace ping
    "userspace/ping",
    # Phase 26 text editor
    "userspace/edit",
    # Phase 27 user accounts
    "userspace/login",
    "userspace/su",
    "userspace/passwd",
    "userspace/adduser",
    "userspace/id",
    "userspace/whoami",
    # Future userspace servers:
    # "userspace/console_server",
    # "userspace/vfs_server",
    # "userspace/fat_server",
    # "userspace/kbd_server",
]

# Exclude xtask and userspace from default build — kernel only
default-members = ["kernel"]

resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
