[workspace]
members = [
    "kernel",
    "kernel-core",
    "xtask",
    # Phase 11 userspace test binaries
    "userspace/syscall-lib",
    "userspace/exit0",
    "userspace/fork-test",
    "userspace/echo-args",
    # Phase 20 userspace init and shell
    "userspace/init",
    "userspace/shell",
    # Phase 23 userspace ping
    "userspace/ping",
    # Phase 26 text editor
    "userspace/edit",
    # Phase 27 user accounts
    "userspace/login",
    "userspace/su",
    "userspace/passwd",
    "userspace/adduser",
    "userspace/id",
    "userspace/whoami",
    # Phase 29 PTY test
    "userspace/pty-test",
    # Phase 39 Unix domain socket test
    "userspace/unix-socket-test",
    # Phase 40 thread test
    "userspace/thread-test",
    # Rust coreutils (replacing C musl utilities)
    "userspace/coreutils-rs",
    # coreutils host tests
    "userspace/coreutils-tests",
    # Future userspace servers:
    # "userspace/console_server",
    # "userspace/vfs_server",
    # "userspace/fat_server",
    # "userspace/kbd_server",
]

# Exclude xtask and userspace from default build — kernel only
default-members = ["kernel"]

resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
