[workspace]
members = [
    "kernel",
    "kernel-core",
    "xtask",
    # Phase 11 userspace test binaries
    "userspace/syscall-lib",
    "userspace/exit0",
    "userspace/fork-test",
    "userspace/echo-args",
    # Phase 20 userspace init and shell
    "userspace/init",
    "userspace/shell",
    # Phase 23 userspace ping
    "userspace/ping",
    # Phase 54 validation probe
    "userspace/udp-smoke",
    "userspace/smoke-runner",
    # Phase 26 text editor
    "userspace/edit",
    # Phase 27 user accounts
    "userspace/login",
    "userspace/su",
    "userspace/passwd",
    "userspace/adduser",
    "userspace/id",
    "userspace/whoami",
    # Phase 29 PTY test
    "userspace/pty-test",
    # Phase 39 Unix domain socket test
    "userspace/unix-socket-test",
    # Phase 40 thread test
    "userspace/thread-test",
    # Phase 42 crypto library
    "userspace/crypto-lib",
    # Phase 42 crypto integration test
    "userspace/crypto-test",
    # Phase 43 SSH server
    "userspace/sshd",
    # Phase 42b async executor
    "userspace/async-rt",
    # Rust coreutils (replacing C musl utilities)
    "userspace/coreutils-rs",
    # coreutils host tests
    "userspace/coreutils-tests",
    # Phase 46 syslogd
    "userspace/syslogd",
    # Phase 46 crond
    "userspace/crond",
    # Phase 52 extracted services:
    "userspace/console_server",
    "userspace/kbd_server",
    "userspace/stdin_feeder",
    "userspace/vfs_server",
    "userspace/fat_server",
    "userspace/net_server",
    # Phase 55b Track C.1 — ring-3 driver runtime library
    "userspace/lib/driver_runtime",
    # Phase 55b Tracks D.1 / E.1 — ring-3 driver scaffolds
    "userspace/drivers/nvme",
    "userspace/drivers/e1000",
]

# Exclude xtask and userspace from default build — kernel only
default-members = ["kernel"]

resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# Phase 42: RustCrypto workspace dependencies
[workspace.dependencies]
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
hkdf = { version = "0.12", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
sunset = { path = "sunset-local", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
