[package]
name = "kernel-core"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
proptest = "1"
loom = "0.7"

[features]
default = ["std"]
std = []

# When used from the kernel (no_std), disable the default "std" feature:
# kernel-core = { path = "../kernel-core", default-features = false }
