[package]
name = "kernel"
version = "0.57.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.15"
uart_16550 = "0.4.0"
log = "0.4.29"
spin = "0.9.8"
x86_64 = "0.15.4"
pic8259 = "0.11.0"
kernel-core = { path = "../kernel-core", default-features = false }

[features]
default = ["trace", "sched-v2"]
trace = []
legacy-bootstrap-allocator = []
# When `sched-trace` is enabled, every v1 block/wake/scan state transition
# emits a structured SchedTrace entry into the per-core trace ring (Phase 43b).
# Default OFF — zero runtime overhead in production builds.
# Enable with: cargo xtask check --features sched-trace
# (or pass --features kernel/sched-trace to direct cargo invocations)
sched-trace = []
# When `hardened` is enabled, the `sys_block_read` whitelist is restricted to
# production storage servers only (vfs_server, fat_server). Without this flag,
# test binaries such as `nvme-crash-smoke` are also permitted, which allows
# EAGAIN observation from the kernel facade path during integration testing.
# Enable this feature for production / secure-boot images.
hardened = []
# When `sched-v2` is enabled, the new per-task pi_lock block/wake primitives
# are used instead of the v1 global-scheduler-lock path. Phase 57a Track C
# introduces `block_current_until`; Tracks D–F migrate all call sites.
# Default OFF — v1 remains active until every call site is migrated.
# A single feature-flip rolls back to v1 if a regression appears mid-track.
# Enable with: cargo xtask check --features sched-v2
# (or pass --features kernel/sched-v2 to direct cargo invocations)
sched-v2 = []
