[package]
name = "kernel"
version = "0.57.2"
edition = "2024"

[dependencies]
bootloader_api = "0.11.15"
uart_16550 = "0.4.0"
log = "0.4.29"
spin = "0.9.8"
x86_64 = "0.15.4"
pic8259 = "0.11.0"
kernel-core = { path = "../kernel-core", default-features = false }

[features]
default = ["trace"]
trace = []
legacy-bootstrap-allocator = []
# When `sched-trace` is enabled, every block/wake/scan state transition
# emits a structured SchedTrace entry into the per-core trace ring (Phase 43b).
# Default OFF — zero runtime overhead in production builds.
# Enable with: cargo xtask check --features sched-trace
# (or pass --features kernel/sched-trace to direct cargo invocations)
sched-trace = []
# When `hardened` is enabled, the `sys_block_read` whitelist is restricted to
# production storage servers only (vfs_server, fat_server). Without this flag,
# test binaries such as `nvme-crash-smoke` are also permitted, which allows
# EAGAIN observation from the kernel facade path during integration testing.
# Enable this feature for production / secure-boot images.
hardened = []
