[package]
name = "kernel"
version = "0.57.4"
edition = "2024"

[dependencies]
bootloader_api = "0.11.15"
uart_16550 = "0.4.0"
log = "0.4.29"
spin = "0.9.8"
x86_64 = "0.15.4"
pic8259 = "0.11.0"
kernel-core = { path = "../kernel-core", default-features = false }

[features]
default = ["trace", "preempt-voluntary"]
# I.2 soak (procedural gate): 24-hour post-flip soak required before removing the
# cfg(feature = "preempt-voluntary") guards (I.3). Do not remove guards until I.2 passes.
trace = []
legacy-bootstrap-allocator = []
# When `sched-trace` is enabled, every block/wake/scan state transition
# emits a structured SchedTrace entry into the per-core trace ring (Phase 43b).
# Default OFF — zero runtime overhead in production builds.
# Enable with: cargo xtask check --features sched-trace
# (or pass --features kernel/sched-trace to direct cargo invocations)
sched-trace = []
# Phase 57d E.2: voluntary-preemption zero-crossing logic.
# When enabled, `preempt_enable` records a deferred reschedule at the
# zero-crossing point; consumed at the user-mode-return boundary (E.3).
# Now in `default` as of Track I (v0.57.4).
# TODO(I.3): remove this feature flag and unwrap all cfg(feature = "preempt-voluntary")
# gates once the 24-hour post-flip soak (I.2) passes. Until then, the gates remain as
# rollback safety. See docs/roadmap/tasks/57d-voluntary-preemption-tasks.md § I.3.
preempt-voluntary = []
# When `hardened` is enabled, the `sys_block_read` whitelist is restricted to
# production storage servers only (vfs_server, fat_server). Without this flag,
# test binaries such as `nvme-crash-smoke` are also permitted, which allows
# EAGAIN observation from the kernel facade path during integration testing.
# Enable this feature for production / secure-boot images.
hardened = []
