[package]
name = "audio_server"
version = "0.57.0"
edition = "2024"
description = "Phase 57 Track D — ring-3 audio server (AC'97 chosen first target)."

# Phase 55b precedent: a `[lib]` target lets `cargo test` exercise the
# pure-logic modules on `x86_64-unknown-linux-gnu` without the OS binary's
# `_start` symbol.  The binary keeps `entry_point!` behind the
# `os-binary` feature so host-test builds skip it.
[lib]
name = "audio_server"
path = "src/lib.rs"

[features]
os-binary = []

[[bin]]
name = "audio_server"
path = "src/main.rs"
required-features = ["os-binary"]

[dependencies]
driver_runtime = { path = "../lib/driver_runtime" }
syscall-lib = { path = "../syscall-lib", features = ["alloc"] }
kernel-core = { path = "../../kernel-core", default-features = false }
