[package]
name = "coreutils-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
syscall-lib = { path = "../syscall-lib" }

[[bin]]
name = "true"
path = "src/true.rs"

[[bin]]
name = "false"
path = "src/false.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "pwd"
path = "src/pwd.rs"

[[bin]]
name = "sleep"
path = "src/sleep.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/rmdir.rs"

[[bin]]
name = "mv"
path = "src/mv.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "grep"
path = "src/grep.rs"

[[bin]]
name = "env"
path = "src/env.rs"

[[bin]]
name = "PROMPT"
path = "src/prompt.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

# Phase 32: build tool utilities
[[bin]]
name = "touch"
path = "src/touch.rs"

[[bin]]
name = "stat"
path = "src/stat_cmd.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[[bin]]
name = "ar"
path = "src/ar.rs"

[[bin]]
name = "install"
path = "src/install.rs"
