[package]
name = "coreutils-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
syscall-lib = { path = "../syscall-lib" }
crypto-lib = { path = "../crypto-lib" }

[[bin]]
name = "true"
path = "src/true.rs"

[[bin]]
name = "false"
path = "src/false.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "pwd"
path = "src/pwd.rs"

[[bin]]
name = "sleep"
path = "src/sleep.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/rmdir.rs"

[[bin]]
name = "mv"
path = "src/mv.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "grep"
path = "src/grep.rs"

[[bin]]
name = "env"
path = "src/env.rs"

[[bin]]
name = "PROMPT"
path = "src/prompt.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

# Phase 32: build tool utilities
[[bin]]
name = "touch"
path = "src/touch.rs"

[[bin]]
name = "stat"
path = "src/stat_cmd.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[[bin]]
name = "ar"
path = "src/ar.rs"

[[bin]]
name = "install"
path = "src/install.rs"

# Phase 33: memory diagnostics
[[bin]]
name = "meminfo"
path = "src/meminfo.rs"

# Phase 34: timekeeping utilities
[[bin]]
name = "date"
path = "src/date.rs"

[[bin]]
name = "uptime"
path = "src/uptime.rs"

[[bin]]
name = "ln"
path = "src/ln.rs"

[[bin]]
name = "readlink"
path = "src/readlink.rs"

# Phase 41 Rust ports (batch 1 — trivial)
[[bin]]
name = "umount"
path = "src/umount.rs"

[[bin]]
name = "dmesg"
path = "src/dmesg.rs"

[[bin]]
name = "chmod"
path = "src/chmod.rs"

[[bin]]
name = "mount"
path = "src/mount.rs"

[[bin]]
name = "kill"
path = "src/kill.rs"

[[bin]]
name = "tee"
path = "src/tee.rs"

# Phase 41 Rust ports (batch 2 — small)
[[bin]]
name = "head"
path = "src/head.rs"

[[bin]]
name = "file"
path = "src/file.rs"

[[bin]]
name = "strings"
path = "src/strings.rs"

[[bin]]
name = "uniq"
path = "src/uniq.rs"

[[bin]]
name = "free"
path = "src/free.rs"

[[bin]]
name = "df"
path = "src/df.rs"

[[bin]]
name = "hexdump"
path = "src/hexdump.rs"

# Phase 41 Rust ports (batch 3 — medium)
[[bin]]
name = "cal"
path = "src/cal.rs"

[[bin]]
name = "tr"
path = "src/tr.rs"

[[bin]]
name = "sort"
path = "src/sort.rs"

[[bin]]
name = "tail"
path = "src/tail.rs"

[[bin]]
name = "ps"
path = "src/ps.rs"

[[bin]]
name = "du"
path = "src/du.rs"

[[bin]]
name = "chown"
path = "src/chown.rs"

[[bin]]
name = "find"
path = "src/find.rs"

# Phase 41 Rust ports (batch 4 — complex C utils)
[[bin]]
name = "cut"
path = "src/cut.rs"

[[bin]]
name = "diff"
path = "src/diff.rs"

[[bin]]
name = "sed"
path = "src/sed.rs"

[[bin]]
name = "xargs"
path = "src/xargs.rs"

[[bin]]
name = "less"
path = "src/less.rs"

[[bin]]
name = "patch"
path = "src/patch.rs"

# Phase 42: crypto utilities
[[bin]]
name = "sha256sum"
path = "src/sha256sum.rs"

[[bin]]
name = "genkey"
path = "src/genkey.rs"
