[package]
name = "display-server-crash-smoke"
version = "0.56.0"
edition = "2024"

[[bin]]
name = "display-server-crash-smoke"
path = "src/main.rs"

[dependencies]
# `alloc` enabled because the crate links the kernel-core control-codec
# (which uses Vec for list payloads) via encode_command / decode_event.
syscall-lib = { path = "../syscall-lib", features = ["alloc"] }
# Phase 56 Track E.4 — control-socket codec lives in kernel-core; the
# F.2 crash-smoke client links against it for `encode_command` and the
# new `ControlCommand::DebugCrash` variant.
kernel-core = { path = "../../kernel-core", default-features = false }
