[package]
name = "gfx-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gfx-demo"
path = "src/main.rs"

[dependencies]
syscall-lib = { path = "../syscall-lib", features = ["alloc"] }
kernel-core = { path = "../../kernel-core", default-features = false }
surface_buffer = { path = "../lib/surface_buffer" }
