[package]
name = "m3ctl"
version = "0.56.0"
edition = "2024"

[[bin]]
name = "m3ctl"
path = "src/main.rs"

[dependencies]
syscall-lib = { path = "../syscall-lib", features = ["alloc"] }
# Phase 56 Track E.4 — control-socket codec lives in kernel-core; the
# m3ctl client links against it for `encode_command` / `decode_event`.
kernel-core = { path = "../../kernel-core", default-features = false }
