[package]
name = "sshd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sshd"
path = "src/main.rs"

[dependencies]
syscall-lib = { path = "../syscall-lib", features = ["alloc"] }
crypto-lib = { path = "../crypto-lib" }
async-rt = { path = "../async-rt", default-features = false, features = ["alloc"] }
sunset = { workspace = true }
getrandom = { workspace = true }
ed25519-dalek = { workspace = true }
