[package]
name = "e1000_driver"
version = "0.55.2"
edition = "2024"
description = "Phase 55b Track E — ring-3 e1000 NIC driver (scaffold)."

[[bin]]
name = "e1000_driver"
path = "src/main.rs"

[dependencies]
driver_runtime = { path = "../../lib/driver_runtime" }
syscall-lib = { path = "../../syscall-lib", features = ["alloc"] }
kernel-core = { path = "../../../kernel-core", default-features = false }
