[package]
name = "nvme_driver"
version = "0.55.2"
edition = "2024"
description = "Phase 55b Track D.1 — ring-3 NVMe driver scaffold (bring-up lands in D.2)."

[[bin]]
name = "nvme_driver"
path = "src/main.rs"

[dependencies]
syscall-lib = { path = "../../syscall-lib", features = ["alloc"] }
driver_runtime = { path = "../../lib/driver_runtime" }
kernel-core = { path = "../../../kernel-core", default-features = false }
