[package]
name = "driver_runtime"
version = "0.55.2"
edition = "2024"
description = "Phase 55b — HAL-shaped safe wrappers around the ring-3 device-host syscalls."

[dependencies]
syscall-lib = { path = "../../syscall-lib", features = ["alloc"] }
kernel-core = { path = "../../../kernel-core", default-features = false }
spin = "0.9.8"
