[package]
name = "surface_buffer"
version = "0.56.0"
edition = "2024"
description = "Phase 56 Track B.4 — userspace surface-buffer helper (refcounted client pixel buffers for display_server)."

[dependencies]
syscall-lib = { path = "../../syscall-lib" }
kernel-core = { path = "../../../kernel-core", default-features = false }
